--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,6 +1,6 @@
 {% assign slides = include.slides | split:"|" %}
 {% assign caption = include.captions | split:"|" %}
-<div id="Glide" class="glide">
+<div class="glide">
     <div class="glide__arrows">
         <button class="glide__arrow prev" data-glide-dir="<">prev</button>
         <button class="glide__arrow next" data-glide-dir=">">next</button>
