--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@
 					<div class="hero-copy">
 						<h1>{{ page.title }}</h1>
 						<p>{{ page.hero-copy }}</p>	
-					     <p><a href="javascript:void(0)" class="button modal-trigger">Watch the video</a></p>
+							<p><a href="{{ page.hero-link-url }}" class="button">{{ page.hero-link-copy }}</a></p>
 					</div>
 				</div>
 			</div>
